E-mail, log out, settings, no "!"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,18 @@
 
     <!-- login -->
     <string name="prompt_blog_url">Blog address</string>
-    <string name="prompt_email">Email</string>
+    <string name="prompt_email">E-mail</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
 
-    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_email">This e-mail address is invalid</string>
     <string name="error_field_required">This field is required</string>
 
     <string name="no_such_blog">There is no Ghost admin at %s/ghost</string>
     <string name="login_unexpected_error">Unexpected error during sign in. Please try again.</string>
     <string name="login_connection_error">Could not connect to %s/ghost. Please try again.</string>
     <string name="login_ssl_unsupported">Your blog does not support https:// (SSL)</string>
-    <string name="logout">Logout</string>
+    <string name="logout">Log out</string>
     <string name="credentials_expired">Auto-login failed, please log in again</string>
     <string name="unsynced_changes_msg">You will lose all unsynced changes if you log out now</string>
     <string name="dont_logout">Don\'t logout</string>
@@ -50,7 +50,7 @@
     <string name="discard">Discard</string>
     <string name="view_homepage">View homepage</string>
     <string name="view_post_on_blog">View post on blog</string>
-    <string name="post_settings">Post Settings</string>
+    <string name="post_settings">Post settings</string>
 
     <string name="save_post_progress">Saving post…</string>
     <string name="save_post_failed">Couldn\'t save post</string>
@@ -58,7 +58,7 @@
     <string name="save_post_timeout">Saved on device</string>
 
     <string name="save_scenario_unknown">Saved</string>
-    <string name="save_scenario_publish_draft">Post published!</string>
+    <string name="save_scenario_publish_draft">Post published</string>
     <string name="save_scenario_unpublish_published_post">Post unpublished</string>
     <string name="save_scenario_auto_save_scheduled_or_published_post">Changes saved on device</string>
     <string name="save_scenario_explicitly_update_scheduled_or_published_post">Post updated</string>
